...
    >
      <Tab.Screen
        name="Characters"
        component={CharactersScreen}
        options={{
          tabBarLabel: 'Characters',
          tabBarButtonTestID: 'tab-characters',
        }}
      />
      <Tab.Screen
        name="Chat"
        component={ChatListScreen}
        options={{
...
